change str to enum

--- a/tools/generate_data/generate_baggage.ipynb
+++ b/tools/generate_data/generate_baggage.ipynb
@@ -27,8 +27,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-30T11:00:00.362094Z",
-     "start_time": "2024-04-30T11:00:00.357456Z"
+     "end_time": "2024-04-30T11:03:02.055622Z",
+     "start_time": "2024-04-30T11:03:02.045137Z"
     }
    },
    "cell_type": "code",
@@ -60,13 +60,13 @@
    ],
    "id": "1de7094e6b5724a0",
    "outputs": [],
-   "execution_count": 45
+   "execution_count": 53
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-30T11:00:03.633832Z",
-     "start_time": "2024-04-30T11:00:03.623133Z"
+     "end_time": "2024-04-30T11:06:02.968042Z",
+     "start_time": "2024-04-30T11:06:02.952822Z"
     }
    },
    "cell_type": "code",
@@ -85,16 +85,16 @@
     "    price: float\n",
     "    additional_info: str\n",
     "    \n",
-    "BAGGAGE_TYPE = [\"CO\", \"CHK\"]\n",
+    "BAGGAGE_TYPE = [BaggageType.CHK, BaggageType.CO]\n",
     "BAGGAGE_TYPE_WEIGHTS = [5, 6]\n",
     "def get_random_baggage_type() -> BaggageType:\n",
     "    return random.sample(BAGGAGE_TYPE, k=1, counts=BAGGAGE_TYPE_WEIGHTS)[0]\n",
     "\n",
-    "def get_random_weight(baggage_type: str) -> float:\n",
+    "def get_random_weight(baggage_type: BaggageType) -> float:\n",
     "    match baggage_type:\n",
-    "        case \"CO\":\n",
+    "        case BaggageType.CO:\n",
     "            return random_float(15.0, target=4.5, strength=2.0)\n",
-    "        case \"CHK\":\n",
+    "        case BaggageType.CHK:\n",
     "            return random_float(45.0, target=10.0, strength=2.0)\n",
     "\n",
     "CARRY_ON_PRICE_PER_KG = 20\n",
@@ -103,9 +103,9 @@
     "CHECK_IN_PRICE_PER_KG = 15\n",
     "MAX_CHECK_IN_KG = 20\n",
     "CHECK_IN_PENALTY = 1.2\n",
-    "def calculate_price(weight: float, baggage_type: str) -> float:\n",
+    "def calculate_price(weight: float, baggage_type: BaggageType) -> float:\n",
     "    match baggage_type:\n",
-    "        case \"CO\":\n",
+    "        case BaggageType.CO:\n",
     "            if weight > MAX_CARRY_ON_KG:\n",
     "                over, weight = divmod(weight, MAX_CARRY_ON_KG)\n",
     "                over = over * MAX_CARRY_ON_KG\n",
@@ -115,7 +115,7 @@
     "            else:\n",
     "                price = weight * CARRY_ON_PRICE_PER_KG\n",
     "            return price\n",
-    "        case \"CHK\":\n",
+    "        case BaggageType.CHK:\n",
     "            if weight > MAX_CHECK_IN_KG:\n",
     "                over, weight = divmod(weight, MAX_CHECK_IN_KG)\n",
     "                over = over * MAX_CHECK_IN_KG\n",
@@ -150,13 +150,13 @@
    ],
    "id": "f9dc2604a9d0778",
    "outputs": [],
-   "execution_count": 46
+   "execution_count": 64
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-30T11:00:04.007713Z",
-     "start_time": "2024-04-30T11:00:03.990842Z"
+     "end_time": "2024-04-30T11:03:02.991852Z",
+     "start_time": "2024-04-30T11:03:02.974217Z"
     }
    },
    "cell_type": "code",
@@ -177,13 +177,13 @@
    ],
    "id": "23c62776fefc79e1",
    "outputs": [],
-   "execution_count": 47
+   "execution_count": 55
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-30T11:00:04.367729Z",
-     "start_time": "2024-04-30T11:00:04.359444Z"
+     "end_time": "2024-04-30T11:03:03.558905Z",
+     "start_time": "2024-04-30T11:03:03.549938Z"
     }
    },
    "cell_type": "code",
@@ -193,13 +193,13 @@
    ],
    "id": "72418dd1689cd568",
    "outputs": [],
-   "execution_count": 48
+   "execution_count": 56
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-30T11:00:04.757201Z",
-     "start_time": "2024-04-30T11:00:04.754210Z"
+     "end_time": "2024-04-30T11:03:04.042530Z",
+     "start_time": "2024-04-30T11:03:04.038533Z"
     }
    },
    "cell_type": "code",
@@ -211,13 +211,13 @@
    ],
    "id": "faef0330e4bcb020",
    "outputs": [],
-   "execution_count": 49
+   "execution_count": 57
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-30T11:00:05.160771Z",
-     "start_time": "2024-04-30T11:00:05.157454Z"
+     "end_time": "2024-04-30T11:03:04.547240Z",
+     "start_time": "2024-04-30T11:03:04.541175Z"
     }
    },
    "cell_type": "code",
@@ -227,13 +227,13 @@
    ],
    "id": "7cd10d5464a426b6",
    "outputs": [],
-   "execution_count": 50
+   "execution_count": 58
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-30T11:00:05.537771Z",
-     "start_time": "2024-04-30T11:00:05.532916Z"
+     "end_time": "2024-04-30T11:03:38.071179Z",
+     "start_time": "2024-04-30T11:03:38.065999Z"
     }
    },
    "cell_type": "code",
@@ -247,15 +247,10 @@
    ],
    "id": "1a9791ed74d5c83d",
    "outputs": [],
-   "execution_count": 51
+   "execution_count": 60
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-04-30T11:00:06.130134Z",
-     "start_time": "2024-04-30T11:00:05.923728Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "from utils import paginate_insert_all\n",
@@ -307,22 +302,8 @@
     "    payment_f.write(\"SELECT 1 FROM DUAL;\\n\")"
    ],
    "id": "c5b0c134164833a7",
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'str' object has no attribute 'name'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[52], line 38\u001B[0m\n\u001B[1;32m     36\u001B[0m payment_amt: \u001B[38;5;28mfloat\u001B[39m \u001B[38;5;241m=\u001B[39m \u001B[38;5;241m0\u001B[39m\n\u001B[1;32m     37\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m baggage \u001B[38;5;129;01min\u001B[39;00m get_random_baggages():\n\u001B[0;32m---> 38\u001B[0m     \u001B[43minsert_baggage\u001B[49m\u001B[43m(\u001B[49m\u001B[43mflight_ticket\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mpayment_id\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mbaggage\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m     39\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m account_id \u001B[38;5;129;01min\u001B[39;00m ACCOUNT_MEMBERSHIP:\n\u001B[1;32m     40\u001B[0m         payment_amt \u001B[38;5;241m+\u001B[39m\u001B[38;5;241m=\u001B[39m baggage\u001B[38;5;241m.\u001B[39mprice \u001B[38;5;241m*\u001B[39m calculate_membership_discount(ACCOUNT_MEMBERSHIP[account_id])\n",
-      "File \u001B[0;32m~/Code/SQL/Database-Design-Assignment/tools/generate_data/utils.py:15\u001B[0m, in \u001B[0;36mpaginate_insert_all.<locals>.wrapper\u001B[0;34m(*args, **kwargs)\u001B[0m\n\u001B[1;32m     12\u001B[0m     \u001B[38;5;28;01melse\u001B[39;00m:\n\u001B[1;32m     13\u001B[0m         \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mINSERT ALL\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[0;32m---> 15\u001B[0m \u001B[43mf\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43margs\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43mkwargs\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m     16\u001B[0m wrapper\u001B[38;5;241m.\u001B[39mcount \u001B[38;5;241m+\u001B[39m\u001B[38;5;241m=\u001B[39m increment\n\u001B[1;32m     18\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m wrapper\u001B[38;5;241m.\u001B[39mcount \u001B[38;5;241m>\u001B[39m\u001B[38;5;241m=\u001B[39m every_n:\n",
-      "Cell \u001B[0;32mIn[52], line 13\u001B[0m, in \u001B[0;36minsert_baggage\u001B[0;34m(flight_ticket_id, payment_id, baggage)\u001B[0m\n\u001B[1;32m     11\u001B[0m \u001B[38;5;28;01melse\u001B[39;00m:\n\u001B[1;32m     12\u001B[0m     additional_info \u001B[38;5;241m=\u001B[39m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mNULL\u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[0;32m---> 13\u001B[0m baggage_f\u001B[38;5;241m.\u001B[39mwrite(BAGGAGE_SQL\u001B[38;5;241m.\u001B[39mformat(\u001B[43mbaggage\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mbaggage_type\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mname\u001B[49m, payment_id, flight_ticket_id, baggage\u001B[38;5;241m.\u001B[39mweight, baggage\u001B[38;5;241m.\u001B[39mprice, additional_info) \u001B[38;5;241m+\u001B[39m \u001B[38;5;124m'\u001B[39m\u001B[38;5;130;01m\\n\u001B[39;00m\u001B[38;5;124m'\u001B[39m)\n",
-      "\u001B[0;31mAttributeError\u001B[0m: 'str' object has no attribute 'name'"
-     ]
-    }
-   ],
-   "execution_count": 52
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
