set payment index and fix string format

--- a/tools/generate_data/generate_baggage.ipynb
+++ b/tools/generate_data/generate_baggage.ipynb
@@ -238,7 +238,7 @@
    },
    "cell_type": "code",
    "source": [
-    "payment_i = 0\n",
+    "payment_i = 128434 + 1\n",
     "def PAYMENT_ID_GEN():\n",
     "    global payment_i\n",
     "    out = f\"P{payment_i:08}\"\n",
@@ -259,12 +259,13 @@
     "with open(\"3insertBaggage.sql\", \"w\") as baggage_f, \\\n",
     "     open(\"1insertPayment.sql\", \"w\") as payment_f:\n",
     "        \n",
-    "    BAGGAGE_SQL = \"    INTO BAGGAGE (BAGGAGE_TYPE_ID, PAYMENT_ID, FLIGHT_TICKET_ID, BAGGAGE_WEIGHT_IN_KG, PRICE, ADDITIONAL_INFO) VALUES ('{}', '{}', '{}', {.2f}, {.2f}, {})\"\n",
+    "    BAGGAGE_SQL = \"    INTO BAGGAGE (BAGGAGE_TYPE_ID, PAYMENT_ID, FLIGHT_TICKET_ID, BAGGAGE_WEIGHT_IN_KG, PRICE, ADDITIONAL_INFO) VALUES ('{}', '{}', '{}', {:.2f}, {:.2f}, {})\"\n",
     "    def insert_baggage(flight_ticket_id: str, payment_id: str, baggage: Baggage):\n",
     "        if baggage.additional_info:\n",
     "            additional_info = f\"'{baggage.additional_info}'\"\n",
     "        else:\n",
     "            additional_info = \"NULL\"\n",
+    "        print(baggage)\n",
     "        baggage_f.write(BAGGAGE_SQL.format(baggage.baggage_type.name, payment_id, flight_ticket_id, baggage.weight, baggage.price, additional_info) + '\\n')\n",
     "        \n",
     "    PAYMENT_SQL = \"    INTO PAYMENT (PAYMENT_METHOD_ID, ACCOUNT_ID, CREATED_AT, AMOUNT) VALUES ('{}', {}, TO_TIMESTAMP('{:%Y-%m-%d %H:%M:%S}', 'YYYY-MM-DD HH24:MI:SS'), {:.2f})\"\n",
