--- a/tools/generate_data/generate_baggage.ipynb
+++ b/tools/generate_data/generate_baggage.ipynb
@@ -27,8 +27,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-30T11:03:02.055622Z",
-     "start_time": "2024-04-30T11:03:02.045137Z"
+     "end_time": "2024-04-30T11:08:23.081490Z",
+     "start_time": "2024-04-30T11:08:23.075044Z"
     }
    },
    "cell_type": "code",
@@ -60,13 +60,13 @@
    ],
    "id": "1de7094e6b5724a0",
    "outputs": [],
-   "execution_count": 53
+   "execution_count": 67
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-30T11:06:02.968042Z",
-     "start_time": "2024-04-30T11:06:02.952822Z"
+     "end_time": "2024-04-30T11:08:23.669623Z",
+     "start_time": "2024-04-30T11:08:23.650546Z"
     }
    },
    "cell_type": "code",
@@ -150,13 +150,13 @@
    ],
    "id": "f9dc2604a9d0778",
    "outputs": [],
-   "execution_count": 64
+   "execution_count": 68
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-30T11:03:02.991852Z",
-     "start_time": "2024-04-30T11:03:02.974217Z"
+     "end_time": "2024-04-30T11:08:24.104919Z",
+     "start_time": "2024-04-30T11:08:24.082874Z"
     }
    },
    "cell_type": "code",
@@ -177,13 +177,13 @@
    ],
    "id": "23c62776fefc79e1",
    "outputs": [],
-   "execution_count": 55
+   "execution_count": 69
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-30T11:03:03.558905Z",
-     "start_time": "2024-04-30T11:03:03.549938Z"
+     "end_time": "2024-04-30T11:08:24.497868Z",
+     "start_time": "2024-04-30T11:08:24.488744Z"
     }
    },
    "cell_type": "code",
@@ -193,13 +193,13 @@
    ],
    "id": "72418dd1689cd568",
    "outputs": [],
-   "execution_count": 56
+   "execution_count": 70
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-30T11:03:04.042530Z",
-     "start_time": "2024-04-30T11:03:04.038533Z"
+     "end_time": "2024-04-30T11:08:24.875406Z",
+     "start_time": "2024-04-30T11:08:24.870501Z"
     }
    },
    "cell_type": "code",
@@ -211,13 +211,13 @@
    ],
    "id": "faef0330e4bcb020",
    "outputs": [],
-   "execution_count": 57
+   "execution_count": 71
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-30T11:03:04.547240Z",
-     "start_time": "2024-04-30T11:03:04.541175Z"
+     "end_time": "2024-04-30T11:08:25.242683Z",
+     "start_time": "2024-04-30T11:08:25.237535Z"
     }
    },
    "cell_type": "code",
@@ -227,13 +227,13 @@
    ],
    "id": "7cd10d5464a426b6",
    "outputs": [],
-   "execution_count": 58
+   "execution_count": 72
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-30T11:03:38.071179Z",
-     "start_time": "2024-04-30T11:03:38.065999Z"
+     "end_time": "2024-04-30T11:08:25.634444Z",
+     "start_time": "2024-04-30T11:08:25.631062Z"
     }
    },
    "cell_type": "code",
@@ -247,10 +247,15 @@
    ],
    "id": "1a9791ed74d5c83d",
    "outputs": [],
-   "execution_count": 60
+   "execution_count": 73
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-30T11:08:40.124961Z",
+     "start_time": "2024-04-30T11:08:26.037218Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "from utils import paginate_insert_all\n",
@@ -265,7 +270,6 @@
     "            additional_info = f\"'{baggage.additional_info}'\"\n",
     "        else:\n",
     "            additional_info = \"NULL\"\n",
-    "        print(baggage)\n",
     "        baggage_f.write(BAGGAGE_SQL.format(baggage.baggage_type.name, payment_id, flight_ticket_id, baggage.weight, baggage.price, additional_info) + '\\n')\n",
     "        \n",
     "    PAYMENT_SQL = \"    INTO PAYMENT (PAYMENT_METHOD_ID, ACCOUNT_ID, CREATED_AT, AMOUNT) VALUES ('{}', {}, TO_TIMESTAMP('{:%Y-%m-%d %H:%M:%S}', 'YYYY-MM-DD HH24:MI:SS'), {:.2f})\"\n",
@@ -304,7 +308,7 @@
    ],
    "id": "c5b0c134164833a7",
    "outputs": [],
-   "execution_count": null
+   "execution_count": 74
   },
   {
    "metadata": {},
